<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ActivitateIntrebari">

    <TextView
        android:id="@+id/simion_maria_tv_q_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/intrebarea_1_n"
       style="@style/tvMic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></TextView>

    <ImageView
        android:id="@+id/simion_maria_iv_clinica"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logoclinicacolorat"
        android:src="@drawable/cliniclogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/simion_maria_iv_5start"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/stele"
        android:src="@drawable/stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simion_maria_iv_clinica" />

    <TextView
        android:id="@+id/simion_maria_tb_intrebare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tvcustombkg"
        android:padding="15dp"
        android:text="@string/intrebare1"
        android:textAlignment="center"
        android:textColor="@color/royalBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simion_maria_iv_5start"></TextView>

    <RadioGroup
        android:id="@+id/simion_maria_rg_raspunsuri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/radiogroupcustom"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simion_maria_tb_intrebare">


        <RadioButton
            android:id="@+id/simion_maria_rb1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/radiobuttons"
            android:textStyle="italic"
            android:text="@string/txt_rb1"></RadioButton>

        <RadioButton
            android:id="@+id/simion_maria_rb2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/radiobuttons"
            android:textStyle="italic"
            android:text="@string/txt_rb2"></RadioButton>

        <RadioButton
            android:id="@+id/simion_maria_rb3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/radiobuttons"
            android:textStyle="italic"
            android:text="@string/txt_rb3"

            ></RadioButton>

        <RadioButton
            android:id="@+id/simion_maria_rb4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/radiobuttons"
            android:textStyle="italic"
            android:text="@string/txt_rb4"></RadioButton>

        <RadioButton
            android:id="@+id/simion_maria_rb5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/radiobuttons"
            android:textStyle="italic"
            android:text="@string/txt_rb5"></RadioButton>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/simion_maria_btn_next2"
        android:background="@drawable/btn_next_custom"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:layout_marginBottom="5dp"
        android:text="@string/btn_act3"
        android:textColor="@color/pureWhite"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simion_maria_rg_raspunsuri"></androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>
