<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activitate2">

    <ImageView
        android:id="@+id/simion_maria_multumiri"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tahnkyoulogo"
        android:src="@drawable/thankyou"
        app:layout_constraintBottom_toTopOf="@+id/simion_maria_tv_multumiri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/simion_maria_tv_multumiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/tvcustombkg"
        android:padding="15dp"
        android:text="@string/multumim_msg"
        android:textStyle="bold"
        style="@style/tvMare"
        app:layout_constraintBottom_toTopOf="@+id/simion_maria_tv_introducere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simion_maria_multumiri"></TextView>

    <TextView
        android:id="@+id/simion_maria_tv_introducere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tvcustombkg"
        android:padding="15dp"
        android:text="@string/instructiuniintroductive"
        android:textStyle="bold"
        style="@style/tvMic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simion_maria_tv_multumiri"></TextView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/simion_maria_btn_next1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="5dp"
        android:text="@string/btnNexttxt"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/pureWhite"
        android:background="@drawable/btn_next_custom"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simion_maria_tv_introducere"></androidx.appcompat.widget.AppCompatButton>





</androidx.constraintlayout.widget.ConstraintLayout>